--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 <p>
-    Hola estudiantes, este es mi sitio web, sigueme en mi twiter 
+    Hola estudiantes, este es mi sitio web, sigueme en mi twiter y en mi facebook para mas consejos.
 </p>
 
 </body>
